chore: final sweep of tracked files

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -9,6 +9,7 @@
 		"resolveJsonModule": true,
 		"isolatedModules": false,
 		"outDir": "../out/vs",
+		"skipLibCheck": true,
 		"types": [
 			"@webgpu/types",
 			"mocha",
